@@ -2,6 +2,7 @@
 //JAVA 25+
 import java.util.*;
 import java.util.function.*;
+import java.util.stream.*;
 
 /// Proof: predicate-not
 /// Source: content/streams/predicate-not.yaml
@@ -9,5 +10,5 @@ void main() {
     List<String> list = List.of("hello", "", "world", "  ");
     List<String> nonEmpty = list.stream()
         .filter(Predicate.not(String::isBlank))
-        .toList();
+        .collect(Collectors.toList());
 }
